Fixed mostRecentAd desktop text overflow and jfmenu

--- a/web/public/src/css/elements/mostRecentPostAd.scss
+++ b/web/public/src/css/elements/mostRecentPostAd.scss
@@ -45,7 +45,8 @@ $newsletterAd_avatar: 0;
 
     .mostRecentPostAd__text {
       // padding: 0.5em 0;
-      padding: 0.7em!important;
+      padding-top:.7em !important;
+      padding-bottom:.7em !important;
     }
 
     .mostRecentPostAd__title {
@@ -124,11 +125,16 @@ $newsletterAd_avatar: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @media all and (min-width: $desktop-screen) {
+      padding-right: 2.5em!important;
+    }
   }
 
   &__badge {
     font-size: 11px;
     padding: 10px 0;
+    min-width: 100px;
     align-self: center;
     display: inline-block;
     text-decoration: none;
@@ -144,7 +150,7 @@ $newsletterAd_avatar: 0;
     margin: 0;
     padding: 0;
     font-size: 1em;
-    margin: 0 1.5em;
+    margin: 0 1.2em;
     margin-top: 1px;
     font-weight: 600;
     align-self: center;
@@ -161,6 +167,7 @@ $newsletterAd_avatar: 0;
   }
 
   &__button {
+    min-width: 90px;
     font-size: 11px;
     padding: 7px 10px;
     align-self: center;
